fixed the problems indicated by Anna
